fixed underline in the main menu fixed search input align and change button color

--- a/backend/FairyTales/FairyTales/css/style.css
+++ b/backend/FairyTales/FairyTales/css/style.css
@@ -2475,7 +2475,7 @@ Search Form
 		background-color: transparent;
 		/* don't overlap <select> element */
 		padding-right: 170px;
-		padding-left: 250px;
+		padding-left: 40%;
 	}
 	.cd-main-search .cd-select {
 		display: inline-block;
@@ -2578,7 +2578,7 @@ Search Form
 		top: 50%;
 		height: 40px;
 		width: 40px;
-		background: #dd85ac url("../images/search.png") no-repeat center;
+		background: #99CCF3 url("../images/search.png") no-repeat center;
 		border-radius: 50%;
 		-webkit-transform: translateY(-50%) scale(0);
 		-moz-transform: translateY(-50%) scale(0);
@@ -2874,14 +2874,14 @@ Search Form
 		transform: translateX(-50%) translateY(-50%) scale(0);
 		height: 100%;
 		width: 100%;
-		background-color: #dd85ac;
+		background-color: #99CCF3;
 		border-radius: 50%;
 		-webkit-transition: -webkit-transform 0.3s;
 		-moz-transition: -moz-transform 0.3s;
 		transition: transform 0.3s;
 	}
 	.no-touch .cd-search-trigger:hover::before {
-		background-color: #df8bb0;
+		background-color: #99CCF3;
 	}
 	.cd-search-trigger.search-form-visible {
 		-webkit-transform: translateX(-20px) translateY(-10px);
